--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meanio",
-  "version": "0.7.6",
+  "version": "0.7.3",
   "description": "Extracted functionality for MEAN.io",
   "author": {
     "name": "linnovate"
@@ -9,6 +9,7 @@
   "license": "MIT",
   "main": "index",
   "scripts": {
+    "preinstall": "node ./scripts/preinstall",
     "postinstall": "cd ./lib/core_modules/server && npm install && cd ../../.."
   },
   "repository": {
@@ -35,8 +36,7 @@
     "q": "^1.0.1",
     "request": "^2.47.0",
     "swig": "^1.3.2",
-    "uglify-js": "^2.4.14",
-    "shelljs": "latest"
+    "uglify-js": "^2.4.14"
   },
   "devDependencies": {
     "mocha": "^1.18.2",
